# new-rl-qp-controller

./: CMakeLists.txt  README.md  vcpkg.json
etc/: NewRLQPController.in.yaml
policy/: rhps1_velocity_2026-07-22_15-35-01.onnx  rhps1_velocity_2026-07-24_19-44-46.onnx  rhps1_velocity_v3_2026-07-10.onnx
src/: CMakeLists.txt  NewRLQPController.cpp  NewRLQPController.h  lib.cpp  utils.cpp  utils.h
src/states/: CMakeLists.txt  NewRLQPController_Initial.cpp  NewRLQPController_Initial.h
tests/: CMakeLists.txt
tests/etc/: mc_rtc.yaml
